--- a/_config.yml
+++ b/_config.yml
@@ -50,16 +50,12 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "hello@jordanrobinson.org"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-#  medium: yourname
+  github: linuxgoose
+  medium: jj-robinson
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: jordanjrobinson2
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
